[package]
name = "app"
version = "1.0.10"
description = "Frak Wallet"
authors = ["Frak Labs"]
license = "GNU GPL 3.0"
repository = "https://github.com/frak-id/wallet"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-safe-area-insets = "0.1.0"
tauri-plugin-biometric = "2"
tauri-plugin-notifications = { version = "0.4", default-features = false, features = ["push-notifications"] }
tauri-plugin-deep-link = "2"

# Android-only: Native WebAuthn via Credential Manager (iOS uses native WKWebView WebAuthn)
# Also includes share + fs plugins for file sharing (needed for recovery file download)
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-webauthn = "0.2.0"
tauri-plugin-share = "2.0.5"
tauri-plugin-fs = "2.4.4"
