[package]
name = "app"
version = "1.0.64"
description = "Frak Wallet"
authors = ["Frak Labs"]
license = "GNU GPL 3.0"
repository = "https://github.com/frak-id/wallet"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }
plist = "1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-safe-area-insets = "0.1.0"
tauri-plugin-biometric = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-app-settings = { path = "plugins/tauri-plugin-app-settings" }
tauri-plugin-install-referrer = { path = "plugins/tauri-plugin-install-referrer" }
tauri-plugin-frak-webauthn = { path = "plugins/tauri-plugin-frak-webauthn" }
tauri-plugin-recovery-hint = { path = "plugins/tauri-plugin-recovery-hint" }
tauri-plugin-frak-share = { path = "plugins/tauri-plugin-frak-share" }
tauri-plugin-frak-firebase = { path = "plugins/tauri-plugin-frak-firebase" }
tauri-plugin-frak-updater = { path = "plugins/tauri-plugin-frak-updater" }
tauri-plugin-clipboard-manager = "2"

# Android-only: share + fs plugins for file sharing (needed for recovery file download)
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-share = "2.0.5"
tauri-plugin-fs = "2.5.1"

# Optimized release profile for smaller, faster builds.
# `strip = false` keeps Rust debug symbols in the unstripped `.so` so the
# Firebase Crashlytics Gradle plugin can extract + upload them via
# `uploadCrashlyticsSymbolFileRelease`. AGP still strips the `.so` before
# packaging the APK/AAB, so the shipped binary stays small — only the
# intermediate build artifacts carry debug info.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = false

# Fast incremental dev builds
[profile.dev]
incremental = true
