[package]
name = "tauri-plugin-frak-crashlytics"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-frak-crashlytics"
description = "Forwards native crashes, non-fatal errors, breadcrumbs and user/key context to Firebase Crashlytics on iOS and Android. No-op on desktop / web."

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
