[package]
name = "tauri-plugin-frak-firebase"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-frak-firebase"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
