[package]
name = "tauri-plugin-recovery-hint"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-recovery-hint"
description = "Persists a tiny recovery hint (last authenticator id + wallet) that survives app uninstall via iCloud KV (iOS) and Block Store (Android)."

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
